@@ -4,6 +4,7 @@ using System.Linq;
 using System.Text;
 using CrewFilesInterface;
 using UnityEngine;
+using DangIt.Perks;
 
 namespace DangIt
 {
