@@ -1,4 +1,11 @@
-﻿NOTIFICATIONS
+﻿DEBUG
+{
+	repairDistance = 20
+	manualFailures = true
+	actionGroups = true
+	freeRepair = true
+}
+NOTIFICATIONS
 {
 	messages = true
 	glow = true
